--- a/package.json
+++ b/package.json
@@ -80,6 +80,11 @@
                 "command": "latex-utilities.bold",
                 "title": "Surround selections with textbf",
                 "category": "LaTeX Utilities"
+            },
+            {
+                "command": "latex-utilities.cleanFormating",
+                "title": "Remove all commands in the selection",
+                "category": "LaTeX Utilities"
             }
         ],
         "keybindings": [
